2009-05-05  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/*.lisp (*): Use map-window instead of xlib:map-window. So
	calls xlib:display-finish-output on each map-request. So speed up
	the window display.

	* src/xlib-util.lisp (map-window): New function. Call
	xlib:display-finish-output on each map request.

2009-04-28  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-second-mode.lisp (sm-handle-motion-notify):
	Optimisation when drawing second mode window.

2009-04-27  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-circulate-mode.lisp (circulate-mode): Optimisation in
	window redraw.

2009-04-22  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (run-program-from-query-string): Launch
	command only with a return validation.

2009-04-22  Xavier Maillard  <xma@gnu.org>

	* src/clfswm-query.lisp (query-string): Use a generic mode.

2009-04-19  Xavier Maillard  <xma@gnu.org>

	* src/clfswm-info.lisp (info-mode): Use generic-mode for info-mode.

2009-04-18  Xavier Maillard  <xma@gnu.org>

	* src/clfswm-generic-mode.lisp (generic-mode): Add a generic mode
	to define all other modes.

2009-04-05  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/package.lisp (): Use *default-font-string* for all
	font-string.

	* src/clfswm-info.lisp (info-mode): Ensure integer windows size.

2009-02-17  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/xlib-util.lisp (null-size-window-p): Better check of null
	sized windows.

2009-02-14  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm.lisp (handle-map-request): Add a fix to manage
	correctly fullscreen windows (SDL particularly).

2008-12-20  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/xlib-util.lisp (get-color): Allocate colors only once -> fix
	a segfault with clisp/new-clx.

	* src/clfswm.lisp (handle-motion-notify): Add a	needed window
	argument.

	* src/clfswm-second-mode.lisp (sm-handle-motion-notify): Add a
	needed window argument.
